# simOpenMesh

./: .gitignore  CMakeLists.txt  config.pri  license.txt  simExtOpenMesh.cpp  simExtOpenMesh.h  simExtOpenMesh.pro  simExtOpenMesh.vcxproj  simOpenMesh-ce.lua  simOpenMesh.cpp  simOpenMesh.h  simOpenMesh.lua  simOpenMesh.pro  simOpenMesh.vcxproj  v_repExtOpenMesh.cpp  v_repExtOpenMesh.h  v_repExtOpenMesh.pro  v_repExtOpenMesh.vcxproj
addOns/: Mesh decimation.lua
lua/: simOpenMesh-ce.lua  simOpenMesh.lua
sourceCode/: simOpenMesh.cpp  simOpenMesh.h
